aligned fixed for mobile

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -140,6 +140,9 @@ strong{
     .blog-details-bg {
         padding-bottom: 0;
     }
+    .tp-hero-4-content-wrap{
+      padding-top: 40px !important;
+    }
     
     // .tp-section-title-90{
     //     font-size: 36px !important;
@@ -315,4 +318,7 @@ strong{
 
 .tp-service-2-accordion-box{
   scrollbar-width: auto !important;
+}
+.videoby_ashish{
+  width: 100%;
 }
